// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 01 - No extra themes 2`] = `
<div>
  <div>
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a-legacy__container___VVsql"
>
  <div
    className="theme-a-legacy__content___jAHmU"
  >
    Child
  </div>
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 1`] = `
<div>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b-legacy__container___JagPe"
>
  <div />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div>
  <div
    className="theme-c-legacy__content___B4OaL"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b-legacy__container___JagPe"
>
  <div
    className="theme-c-legacy__content___B4OaL"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a-legacy__container___VVsql"
>
  <div
    className="theme-a-legacy__content___jAHmU   theme-c-legacy__content___B4OaL"
  />
</div>
`;

exports[`01 - No default theme. 01 - No options at registration. 04 - Context + ad hoc 4`] = `
<div
  className="theme-b-legacy__container___JagPe"
>
  <div
    className="theme-c-legacy__content___B4OaL"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 1`] = `
<div
  className="theme-a-legacy__container___VVsql"
>
  <div
    className="theme-a-legacy__content___jAHmU"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 01 - No extra themes 2`] = `
<div
  className="theme-a-legacy__container___VVsql"
>
  <div
    className="theme-a-legacy__content___jAHmU"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 02 - Ad hoc theme 1`] = `
<div
  className="theme-a-legacy__container___VVsql   theme-b-legacy__container___JagPe"
>
  <div
    className="theme-a-legacy__content___jAHmU"
  >
    Child
  </div>
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 1`] = `
<div
  className="theme-a-legacy__container___VVsql"
>
  <div
    className="theme-a-legacy__content___jAHmU"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 03 - Context theme 2`] = `
<div
  className="theme-b-legacy__container___JagPe"
>
  <div
    className="theme-a-legacy__content___jAHmU"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 1`] = `
<div
  className="theme-a-legacy__container___VVsql"
>
  <div
    className="theme-a-legacy__content___jAHmU   theme-c-legacy__content___B4OaL"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 2`] = `
<div
  className="theme-b-legacy__container___JagPe"
>
  <div
    className="theme-a-legacy__content___jAHmU   theme-c-legacy__content___B4OaL"
  />
</div>
`;

exports[`02 - With default theme 01 - No options at registration. 04 - Context + ad hoc 3`] = `
<div
  className="theme-a-legacy__container___VVsql"
>
  <div
    className="theme-c-legacy__content___B4OaL   theme-d-legacy__content___cGQH7"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 01 - composeTheme 1`] = `
<div
  className="theme-b-legacy__container___JagPe"
>
  <div
    className="theme-a-legacy__content___jAHmU"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 02 - composeAdhocTheme 1`] = `
<div>
  <div
    className="theme-c-legacy__content___B4OaL"
  />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 1`] = `
[
  <div
    className="theme-a-legacy__container___VVsql"
  >
    <div
      className="theme-a-legacy__content___jAHmU   theme-c-legacy__content___B4OaL"
    />
  </div>,
  <div
    className="theme-b-legacy__container___JagPe"
  >
    <div
      className="theme-a-legacy__content___jAHmU   theme-c-legacy__content___B4OaL"
    />
  </div>,
]
`;

exports[`02 - With default theme 02 - Options at registration 03 - themePriority 2`] = `"Invalid priority"`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 1`] = `
<div>
  <div />
</div>
`;

exports[`02 - With default theme 02 - Options at registration 04 - Theme props mapping 2`] = `
{
  "props": {
    "ref": null,
  },
  "theme": {
    "container": "theme-a-legacy__container___VVsql",
    "content": "theme-a-legacy__content___jAHmU",
  },
}
`;

exports[`Compatibility switching 1`] = `"Invalid compatibility mode"`;
